--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ task updateRuntimeLibraries(type: UpdateLibrariesTask) {
 task updateShadeLibraries(type: UpdateLibrariesTask) {
 	directory = librariesShadeDirectory
 	libraries = [
-		[name: 'raknetserver-8.jar', url: 'https://build.true-games.org/job/RakNetServer/29/artifact/target/RakNetServer.jar'],
+		[name: 'raknetserver-8.jar', url: 'https://www.dropbox.com/s/2lj3bdj4q77fdtp/RakNetServer.jar?dl=1'],
 		[name: 'udpserver-2.jar', url: 'https://build.true-games.org/job/UdpServerSocketChannel/11/artifact/target/UdpServerSocketChannel.jar']
 	]
 }
