--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ task updateRuntimeLibraries(type: UpdateLibrariesTask) {
 task updateShadeLibraries(type: UpdateLibrariesTask) {
 	directory = librariesShadeDirectory
 	libraries = [
-		[name: 'raknetserver-30.jar', url: 'https://build.true-games.org/job/RakNetServer/30/artifact/target/RakNetServer.jar'],
+		[name: 'raknetserver-31.jar', url: 'https://www.dropbox.com/s/grlr9ft65b9js27/RakNetServer.jar?dl=1'],
 		[name: 'udpserver-11.jar', url: 'https://build.true-games.org/job/UdpServerSocketChannel/11/artifact/target/UdpServerSocketChannel.jar']
 	]
 }
