use original raknet

--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ task updateRuntimeLibraries(type: UpdateLibrariesTask) {
 task updateShadeLibraries(type: UpdateLibrariesTask) {
 	directory = librariesShadeDirectory
 	libraries = [
-		[name: 'raknetserver-31.jar', url: 'https://www.dropbox.com/s/grlr9ft65b9js27/RakNetServer.jar?dl=1'],
+		[name: 'raknetserver-30.jar', url: 'https://build.true-games.org/job/RakNetServer/30/artifact/target/RakNetServer.jar'],
 		[name: 'udpserver-11.jar', url: 'https://build.true-games.org/job/UdpServerSocketChannel/11/artifact/target/UdpServerSocketChannel.jar']
 	]
 }
@@ -91,23 +91,17 @@ sourceSets {
 repositories {
 	mavenCentral()
 	jcenter()
-	flatDir {
-		dirs 'libraries_shade', 'libraries_runtime', 'processors'
-	}
 }
 
 dependencies {
-	shadow ":spigot-1.13.2-3"
-	compile ":spigot-1.13.2-3"
-	compile ":raknetserver-31"
-	compile ":udpserver-11"
+	shadow fileTree(dir: librariesRuntimeDirectory, include: '*.jar')
+	compile fileTree(dir: librariesShadeDirectory, include: '*.jar')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 	compile group: 'it.unimi.dsi', name: 'fastutil', version: '8.2.2'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '5.2'
-	compile ":ProtocolSupportBuildProcessor"
-	annotationProcessor ":ProtocolSupportBuildProcessor"
-	shadow ":ProtocolSupportBuildProcessor"
+	annotationProcessor fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
+	shadow fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
 	testCompile fileTree(dir: librariesRuntimeDirectory, include: '*.jar')
 	testCompile fileTree(dir: librariesShadeDirectory, include: '*.jar')
 	testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
