--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,7 @@ dependencies {
 	compile group: 'it.unimi.dsi', name: 'fastutil', version: '8.2.2'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '5.2'
-	#annotationProcessor fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
+	annotationProcessor fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
 	shadow fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
 	testCompile fileTree(dir: librariesRuntimeDirectory, include: '*.jar')
 	testCompile fileTree(dir: librariesShadeDirectory, include: '*.jar')
