--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,30 @@
+buildscript {
+	dependencies {
+		classpath 'org.jdom:jdom2:2.0.6'
+		classpath 'org.ow2.asm:asm:5.1'
+		classpath 'org.ow2.asm:asm-commons:5.1'
+		classpath 'commons-io:commons-io:2.5'
+		classpath 'org.apache.ant:ant:1.9.7'
+		classpath 'org.codehaus.plexus:plexus-utils:3.0.24'
+		classpath 'org.vafer:jdependency:1.1'
+		classpath files('gradle/plugins/shadowPlugin.jar')
+	}
+	repositories {
+		mavenCentral()
+	}
+}
+
 plugins {
-	id 'com.github.johnrengelman.shadow' version '5.0.0'
 	id 'java'
 }
 
 apply from: 'helper.gradle'
+apply plugin: com.github.jengelman.gradle.plugins.shadow.ShadowPlugin
+
+
+tasks.withType(AbstractCompile) {
+	classpath += configurations.shadow
+}
 
 
 group 'protocolsupport'
@@ -73,13 +94,14 @@ repositories {
 }
 
 dependencies {
+	shadow fileTree(dir: librariesRuntimeDirectory, include: '*.jar')
+	compile fileTree(dir: librariesShadeDirectory, include: '*.jar')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 	compile group: 'it.unimi.dsi', name: 'fastutil', version: '8.2.2'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '5.2'
 	annotationProcessor fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
 	shadow fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
-
 	testCompile fileTree(dir: librariesRuntimeDirectory, include: '*.jar')
 	testCompile fileTree(dir: librariesShadeDirectory, include: '*.jar')
 	testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
@@ -87,11 +109,6 @@ dependencies {
 }
 
 compileJava {
-	doFirst {
-	    classpath -= configurations.shadow
-	    classpath += configurations.shadow
-	}
-
 	options.encoding = 'UTF-8'
 	options.incremental = false
 	options.compilerArgs << ("-Aprotocolsupportbuildprocessor.generatedresourcesdirectory=" + newFile(generatedResourcesDirectory, resourcesDirectoryName, "preload").getAbsolutePath())
@@ -139,6 +156,7 @@ shadowJar {
 	from generatedResourcesDirectory
 
 	archiveName = jar.archiveName
+	minimizeJar = true
 
 	exclude 'META-INF/**'
 	relocate 'org.apache', 'protocolsupport.libs.org.apache'
