--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,9 @@
-buildscript {
-	dependencies {
-		classpath 'org.jdom:jdom2:2.0.6'
-		classpath 'org.ow2.asm:asm:5.1'
-		classpath 'org.ow2.asm:asm-commons:5.1'
-		classpath 'commons-io:commons-io:2.5'
-		classpath 'org.apache.ant:ant:1.9.7'
-		classpath 'org.codehaus.plexus:plexus-utils:3.0.24'
-		classpath 'org.vafer:jdependency:1.1'
-		classpath files('gradle/plugins/shadowPlugin.jar')
-	}
-	repositories {
-		mavenCentral()
-	}
-}
-
 plugins {
+	id 'com.github.johnrengelman.shadow' version '5.0.0'
 	id 'java'
 }
 
 apply from: 'helper.gradle'
-apply plugin: com.github.jengelman.gradle.plugins.shadow.ShadowPlugin
-
-
-tasks.withType(AbstractCompile) {
-	classpath += configurations.shadow
-}
 
 
 group 'protocolsupport'
@@ -94,14 +73,15 @@ repositories {
 }
 
 dependencies {
-	shadow fileTree(dir: librariesRuntimeDirectory, include: '*.jar')
-	compile fileTree(dir: librariesShadeDirectory, include: '*.jar')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 	compile group: 'it.unimi.dsi', name: 'fastutil', version: '8.2.2'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-	compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '5.2'
+	compile fileTree(dir: librariesShadeDirectory, include: '*.jar')
+	shadow fileTree(dir: librariesRuntimeDirectory, include: '*.jar')
+
 	annotationProcessor fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
 	shadow fileTree(dir: annotationProcessorsDirectory, include: '*.jar')
+
 	testCompile fileTree(dir: librariesRuntimeDirectory, include: '*.jar')
 	testCompile fileTree(dir: librariesShadeDirectory, include: '*.jar')
 	testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
@@ -109,6 +89,11 @@ dependencies {
 }
 
 compileJava {
+	doFirst {
+	    classpath -= configurations.shadow
+	    classpath += configurations.shadow
+	}
+
 	options.encoding = 'UTF-8'
 	options.incremental = false
 	options.compilerArgs << ("-Aprotocolsupportbuildprocessor.generatedresourcesdirectory=" + newFile(generatedResourcesDirectory, resourcesDirectoryName, "preload").getAbsolutePath())
@@ -156,23 +141,37 @@ shadowJar {
 	from generatedResourcesDirectory
 
 	archiveName = jar.archiveName
-	minimizeJar = true
 
 	exclude 'META-INF/**'
 	relocate 'org.apache', 'protocolsupport.libs.org.apache'
 	relocate 'it.unimi.dsi.fastutil', 'protocolsupport.libs.it.unimi.dsi.fastutil'
 	relocate 'com.google.gson', 'protocolsupport.libs.com.google.gson'
-	relocate 'com.nimbusds', 'protocolsupport.libs.com.nimbusds'
-	relocate 'org.objectweb', 'protocolsupport.libs.org.objectweb'
-	relocate 'net.minidev', 'protocolsupport.libs.net.minidev'
-	relocate 'net.jcip', 'protocolsupport.libs.net.jcip'
-	relocate 'raknetserver', 'protocolsupport.libs.raknetserver'
-	relocate 'udpserversocketchannel', 'protocolsupport.libs.udpserversocketchannel'
+
+	minimize()
+}
+
+
+task postprocessFatJar(type: Zip) {
+	Set<String> workaroundRelocationClasses = new HashSet<>(Arrays.asList(
+		"protocolsupport/zplatform/impl/spigot/entitytracker/SpigotEntityTrackerEntryInjectorMap.class"
+	));
+	File originalJar = new File(shadowJar.destinationDir, shadowJar.archiveName)
+
+	archiveName = shadowJar.archiveName
+
+	from(zipTree(originalJar)) {
+        exclude(workaroundRelocationClasses)
+        exclude 'META-INF/**'
+	}
+
+	from(sourceSets.main.output.classesDirs) {
+		include(workaroundRelocationClasses)    
+	}
 }
 
 task copyFinalJarToTarget(type: DefaultTask) {doLast{
 	java.nio.file.Files.copy(
-		jar.archivePath.getAbsoluteFile().toPath(),
+		postprocessFatJar.archivePath.getAbsoluteFile().toPath(),
 		new File(targetJarDirectory, jar.baseName + '.jar').getAbsoluteFile().toPath(),
 		java.nio.file.StandardCopyOption.REPLACE_EXISTING
 	)
@@ -188,4 +187,5 @@ jar.enabled = false
 jar.finalizedBy(shadowJar)
 shadowJar.dependsOn(generateInfo)
 shadowJar.dependsOn(generateLocaleList)
-shadowJar.finalizedBy(copyFinalJarToTarget)
+shadowJar.finalizedBy(postprocessFatJar)
+postprocessFatJar.finalizedBy(copyFinalJarToTarget)
